--- a/index.html
+++ b/index.html
@@ -36,10 +36,19 @@
 
 
     <!-- Please place the code below this line -->
-
-
-    
-    
+    <figure class="Card">
+        <div class="profile-image"><img src="https://github.com/github.png?size=460" alt="Profile-Image" /></div>
+        <figcaption>
+            <h3>Abhay Pawar</h3>
+            <h5 class="Main Role">Contributor</h5>
+            <div class="line"></div>
+            <div class="icons">
+                <a href="https://github.com/abhaygzb15" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                <a href="TWITTER_URL" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+                <a href="https://www.linkedin.com/in/abhay-pawar-3a25a0254/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+            </div>
+        </figcaption>
+    </figure>
     <!-- Please place the code above this line -->
 
     <footer>
