Added changes #line43

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="profile-image"><img src="https://github.com/github.png?size=460" alt="Profile-Image" /></div>
         <figcaption>
             <h3>Abhay Pawar</h3>
-            <h5 class="Main Role">Contributor</h5>
+            <h5 class="Role">Contributor</h5>
             <div class="line"></div>
             <div class="icons">
                 <a href="https://github.com/abhaygzb15" target="_blank"><i class="ion-social-github" id="github"></i></a>
