--- a/index.html
+++ b/index.html
@@ -36,7 +36,22 @@
 
 
     <!-- Please place the code below this line -->
-
+<figure class="Card">
+    <div class="profile-image">
+      <img src="https://i.pinimg.com/originals/96/4b/be/964bbea93db7d20062c41ee4af7b1e4a.jpg" width="120" height="120" alt="Profile-Image" />
+    </div>
+    <figcaption>
+      <h3>Vani Sharma</h3>
+      <h5 class="Role">Contributor</h5>
+      <div class="line"></div>
+      <div class="icons">
+        <a href="https://github.com/Vani177" target="_blank"
+          ><i class="ion-social-github" id="github"></i
+        ></a>
+      </div>
+    </figcaption>
+  </figure>
+  
 
     
     
