refactor:h1 text changed for the issue #5

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- title -->
-    <h1>Profile Card HacktoberFest Edition</h1>
+    <h1>CardConnect</h1>
 
     <!-- cards -->
     <figure class="Card">
