--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Please place the code below this line -->
 <figure class="Card">
     <div class="profile-image">
-      <img src="https://i.pinimg.com/originals/96/4b/be/964bbea93db7d20062c41ee4af7b1e4a.jpg" width="120" height="120" alt="Profile-Image" />
+      <img src="https://i.pinimg.com/564x/5d/63/54/5d635430f8b95a7c4882d72d183d1d89.jpg" alt="Profile-Image" />
     </div>
     <figcaption>
       <h3>Vani Sharma</h3>
