Added ayushichoudhary-19 as contributor

--- a/index.html
+++ b/index.html
@@ -42,7 +42,23 @@
 
     <!-- Please place the code below this line -->
 
-
+    <figure class="Card">
+        <div class="profile-image"><img src="https://pbs.twimg.com/profile_images/1697583402227204096/Zp7Gwdf8_400x400.jpg"
+                alt="profile-sample6" /></div>
+        <figcaption>
+            <h3>Ayushi Choudhary</h3>
+            <h5 class="Main">Contributor</h5>
+            <div class="line"></div>
+            <div class="icons">
+                <a href="https://github.com/ayushichoudhary-19" target="_blank"><i class="ion-social-github"
+                        id="github"></i></a>
+                <a href="https://twitter.com/geekyAyushi" target="_blank"> <i class="ion-social-twitter"
+                        id="twitter"></i></a>
+                <a href="https://www.linkedin.com/in/ayushi-choudhary-7688b91ba/" target="_blank"> <i
+                        class="ion-social-linkedin" id="linkedin"></i></a>
+            </div>
+        </figcaption>
+    </figure>
 
 
     <!-- Please place the code above this line -->
