--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </figcaption>
     </figure>
 
+     <figure class="Card">
         <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/97227305?v=4" alt="Profile-Image" /></div>
         <figcaption>
             <h3>Basavaraja K J</h3>
