--- a/index.html
+++ b/index.html
@@ -41,7 +41,19 @@
 
 
     <!-- Please place the code below this line -->
-
+    <figure class="Card">
+        <div class="profile-image">
+          <img src="https://avatars.githubusercontent.com/u/95991769?v=4" alt="Profile-Image" />
+        </div>
+        <figcaption>
+          <h3>Sujit Kandekar</h3>
+          <h5 class="Role">Contributor</h5>
+          <div class="line"></div>
+          <div class="icons">
+            <a href="https://github.com/sujitkandekar100" target="_blank"><i class="ion-social-github" id="github"></i></a>
+          </div>
+        </figcaption>
+      </figure>
 
 
 
