--- a/index.html
+++ b/index.html
@@ -124,6 +124,19 @@
    </figure>
 
 
+    <figure class="Card">
+        <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/73350352?v=4" alt="Profile-Image" /></div>
+        <figcaption>
+            <h3>Muhamad Dian Rahendra</h3>
+            <h5 class="Role">Contributor</h5>
+            <div class="line"></div>
+            <div class="icons">
+                <a href="https://github.com/Muanra217" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                <a href="https://www.linkedin.com/in/muanra217/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+            </div>
+        </figcaption>
+    </figure>
+
     <!-- Please place the code above this line -->
       
       
