--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
         </figcaption>
    </figure>
 
+   <figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/146003237?s=96&v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Kaniz Kaniz-Fatma</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/Kaniz-Fatma" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://twitter.com/KANIZFATMA31942" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+            <a href="https://www.linkedin.com/in/kaniz-fatma-69b336245/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
+
 
     <!-- Please place the code above this line -->
       
