added Akshat Khatri

--- a/index.html
+++ b/index.html
@@ -137,6 +137,21 @@
     </figcaption>
 </figure>
 
+        <figure class="Card">
+    <div class="profile-image"><img src="{IMAGE-URL}" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Akshat Khatri</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/akshatkhatri" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            
+            <!--  i dont have a twitter account -->
+            <a href="www.linkedin.com/in/akshat-khatri-312a69285" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
+
 
     <!-- Please place the code above this line -->
       
