--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </figure>
 
     <figure class="Card">
-    <div class="https://avatars.githubusercontent.com/u/75848598?v=4"><img src="{IMAGE-URL}" alt="Profile-Image" /></div>
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/75848598?v=4" alt="Profile-Image" /></div>
     <figcaption>
         <h3>Ishita Pathak</h3>
         <h5 class="Role">Contributor</h5>
