--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </figure>
 
         <figure class="Card">
-    <div class="profile-image"><img src="{IMAGE-URL}" alt="Profile-Image" /></div>
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/136313166?v=4" alt="Profile-Image" /></div>
     <figcaption>
         <h3>Akshat Khatri</h3>
         <h5 class="Role">Contributor</h5>
