--- a/index.html
+++ b/index.html
@@ -42,7 +42,18 @@
 
 
     <!-- Please place the code below this line -->
-
+   <figure class="Card">
+    <div class="profile-image">
+      <img src="https://i.pinimg.com/564x/73/91/07/7391075ec88dd14202ab1f1e19a0435e.jpg" alt="Profile-Image" />
+    </div>
+    <figcaption>
+      <h3>Vani Sharma</h3>
+      <h5 class="Role">Contributor</h5>
+      <div class="line"></div>
+      <div class="icons">
+        <a href="https://github.com/Vani177" target="_blank"
+          ><i class="ion-social-github" id="github"></i
+        ></a>
       
     <figure class="Card">
         <div class="profile-image">
