--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
         <a href="https://github.com/Vani177" target="_blank"
           ><i class="ion-social-github" id="github"></i
         ></a>
-      
+ </div>
+        </figcaption>
+    </figure>      
+
+
     <figure class="Card">
         <div class="profile-image">
           <img src="https://avatars.githubusercontent.com/u/95991769?v=4" alt="Profile-Image" />
