--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 alt="profile-sample6" /></div>
         <figcaption>
             <h3>Ayush Sarode</h3>
-            <h5 class="Main">Maintainter</h5>
+            <h5> class="Main">Maintainter</h5>
             <div class="line"></div>
             <div class="icons">
                 <a href="https://github.com/ayushsarode" target="_blank"><i class="ion-social-github"
@@ -48,7 +48,7 @@
     </div>
     <figcaption>
       <h3>Vani Sharma</h3>
-      <h5 class="Role">Contributor</h5>
+      <h5> class="Role">Contributor</h5>
       <div class="line"></div>
       <div class="icons">
         <a href="https://github.com/Vani177" target="_blank"
@@ -65,7 +65,7 @@
         </div>
         <figcaption>
           <h3>Sujit Kandekar</h3>
-          <h5 class="Role">Contributor</h5>
+          <h5> class="Role">Contributor</h5>
           <div class="line"></div>
           <div class="icons">
             <a href="https://github.com/sujitkandekar100" target="_blank"><i class="ion-social-github" id="github"></i></a>
@@ -78,7 +78,7 @@
         <div class="profile-image"><img src="https://github.com/github.png?size=460" alt="Profile-Image" /></div>
         <figcaption>
             <h3>Abhay Pawar</h3>
-            <h5 class="Role">Contributor</h5>
+            <h5> class="Role">Contributor</h5>
             <div class="line"></div>
             <div class="icons">
                 <a href="https://github.com/abhaygzb15" target="_blank"><i class="ion-social-github" id="github"></i></a>
@@ -94,7 +94,7 @@
         <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/97227305?v=4" alt="Profile-Image" /></div>
         <figcaption>
             <h3>Basavaraja K J</h3>
-            <h5 class="Role">Contributor</h5>
+            <h5> class="Role">Contributor</h5>
             <div class="line"></div>
             <div class="icons">
                 <a href="https://github.com/Basavarajakjbasuu" target="_blank"><i class="ion-social-github" id="github"></i></a>
@@ -109,7 +109,7 @@
     <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/146003237?s=96&v=4" alt="Profile-Image" /></div>
     <figcaption>
         <h3>Kaniz Kaniz-Fatma</h3>
-        <h5 class="Role">Contributor</h5>
+        <h5> class="Role">Contributor</h5>
         <div class="line"></div>
         <div class="icons">
             <a href="https://github.com/Kaniz-Fatma" target="_blank"><i class="ion-social-github" id="github"></i></a>
@@ -125,7 +125,7 @@
     <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/136313166?v=4" alt="Profile-Image" /></div>
     <figcaption>
         <h3>Akshat Khatri</h3>
-        <h5 class="Role">Contributor</h5>
+        <h5> class="Role">Contributor</h5>
         <div class="line"></div>
         <div class="icons">
             <a href="https://github.com/akshatkhatri" target="_blank"><i class="ion-social-github" id="github"></i></a>
@@ -140,7 +140,7 @@
     <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/75848598?v=4" alt="Profile-Image" /></div>
     <figcaption>
         <h3>Ishita Pathak</h3>
-        <h5 class="Role">Contributor</h5>
+        <h5> class="Role">Contributor</h5>
         <div class="line"></div>
         <div class="icons">
             <a href="https://github.com/IshitaPathak" target="_blank"><i class="ion-social-github" id="github"></i></a>
@@ -154,7 +154,7 @@
         <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/137263706?v=4" alt="Profile-Image" /></div>
         <figcaption>
             <h3>Sameer</h3>
-            <h5 class="Role">Contributor</h5>
+            <h5> class="Role">Contributor</h5>
             <div class="line"></div>
             <div class="icons">
                 <a href="https://github.com/Sameer-choudhary-git" target="_blank"><i class="ion-social-github" id="github"></i></a>
