--- a/index.html
+++ b/index.html
@@ -148,6 +148,20 @@
         </figcaption>
     </figure>
 
+    <figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/70965960?v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Noor Siddiqui</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/noormohammadsiddiqui-io" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://twitter.com/noormohammad_io" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+            <a href="https://www.linkedin.com/in/noor-mohammad-siddiqui-475a7b134/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
+
 
 
     <!-- Please place the code above this line -->
