--- a/index.html
+++ b/index.html
@@ -190,6 +190,18 @@
         </figcaption>
     </figure>
 
+    <figure class="Card">
+        <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/96246964?v=4" alt="Profile-Image" /></div>
+        <figcaption>
+            <h3>Ansh Singla</h3>
+            <h5 class="Role">Contributor</h5>
+            <div class="line"></div>
+            <div class="icons">
+                <a href="https://github.com/ansh3038" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                <a href="https://www.linkedin.com/in/anshsingla/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+            </div>
+        </figcaption>
+    </figure>
 
 
     <!-- Please place the code above this line -->
