--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
 
 
     <!-- Please place the code below this line -->
+
+<figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/80102808?v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Ayushman Koley</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/ayushmankoley" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://www.linkedin.com/in/ayushman-koley/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
+
    <figure class="Card">
     <div class="profile-image">
       <img src="https://i.pinimg.com/564x/73/91/07/7391075ec88dd14202ab1f1e19a0435e.jpg" alt="Profile-Image" />
