--- a/index.html
+++ b/index.html
@@ -203,6 +203,19 @@
         </figcaption>
     </figure>
 
+<figure class="Card">
+    <div class="profile-image"><img src="https://github.com/account" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Enrique Fiore</h3>
+        <h5> class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/enriquefiore" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://www.linkedin.com/in/enriquefiore/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
+
 
     <!-- Please place the code above this line -->
       
