--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
     </figure>
 
 <figure class="Card">
-    <div class="profile-image"><img src="https://github.com/account" alt="Profile-Image" /></div>
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/64843313?v=4" alt="Profile-Image" /></div>
     <figcaption>
         <h3>Enrique Fiore</h3>
-        <h5> class="Role">Contributor</h5>
+        <h5 class="Role">Contributor</h5>
         <div class="line"></div>
         <div class="icons">
             <a href="https://github.com/enriquefiore" target="_blank"><i class="ion-social-github" id="github"></i></a>
