--- a/index.html
+++ b/index.html
@@ -216,6 +216,18 @@
     </figcaption>
 </figure>
 
+<figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/78204201?s=400&u=a3a6e88b31225cf773aac01f68be44c7530b7140&v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Saifullah</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/Saifullah00" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://www.linkedin.com/in/saifullah-b83a25205" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
 
     <!-- Please place the code above this line -->
       
