--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <figure class="Card">
     <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/120549574?s=400&u=7c56b0e54efd9a0fa9df8014cc45b26d553aaa93&v=4" alt="Profile-Image" /></div>
     <figcaption>
-        <h3>Enrique Fiore</h3>
+        <h3>Vinay Sharma</h3>
         <h5 class="Role">Contributor</h5>
         <div class="line"></div>
         <div class="icons">
