--- a/index.html
+++ b/index.html
@@ -217,6 +217,21 @@
 </figure>
 
 
+
+        <figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/76618190?v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Diwakar Singh</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/thakurdiwakar" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://twitter.com/ThakurDiwakar14" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+            <a href="https://www.linkedin.com/in/thakurdiwakar/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
+
     <!-- Please place the code above this line -->
       
       
