--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Roboto+Slab:wght@300;400;500;600;700&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Roboto+Slab:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+
+    <!-- favicon -->
+    <link rel="icon" href="favicon_io/favicon-32x32.png">
+    <link rel="stylesheet" href="favicon_io/favicon-16x16.png">
 
 </head>
 
