--- a/index.html
+++ b/index.html
@@ -363,17 +363,19 @@
 
         <figure class="Card">
             <div class="profile-image"><img src="https://drive.google.com/file/d/1sG63iEyHwhGH-bJQEFxdPhbj0IaH_yBc/view?usp=sharing" alt="Profile-Image" /></div>
-            <figcaption>
-                <h3>Muhammad Rebaal</h3>
-                <h5 class="Role">Contributor</h5>
-                <div class="line">I'm a FullStack Developer</div>
-                <div class="icons">
-                    <a href="https://github.com/Muhammad-Rebaal" target="_blank"><i class="ion-social-github" id="github"></i></a>
-                    <a href="https://twitter.com/M_Rebaal47" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
-                    <a href="https://www.linkedin.com/in/muhammad-rebaal-34936616a/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
-                </div>
-            </figcaption>
-        </figure>
+            <figure class="Card">
+                <div class="profile-image"><img src="https://drive.google.com/file/d/1sG63iEyHwhGH-bJQEFxdPhbj0IaH_yBc/view?usp=sharing" alt="Profile-Image" /></div>
+                <figcaption>
+                    <h3>Muhammad Rebaal</h3>
+                    <h5 class="Role">Contributor</h5>
+                    <div class="line">I'm a FullStack Developer and ML Engineer</div>
+                    <div class="icons">
+                        <a href="https://github.com/Muhammad-Rebaal" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                        <a href="https://twitter.com/M_Rebaal47" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/muhammad-rebaal-34936616a/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+                    </div>
+                </figcaption>
+            </figure>
 
         <!-- Please place the code above this line -->
 
