--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                 <figcaption>
                     <h3>Muhammad Rebaal</h3>
                     <h5 class="Role">Contributor</h5>
-                    <div class="line">I'm a FullStack Developer and ML Engineer</div>
+                    <div class="line">I'm a FullStack Developer and ML-Engineer</div>
                     <div class="icons">
                         <a href="https://github.com/Muhammad-Rebaal" target="_blank"><i class="ion-social-github" id="github"></i></a>
                         <a href="https://twitter.com/M_Rebaal47" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
