Updated new card

--- a/index.html
+++ b/index.html
@@ -312,6 +312,21 @@
 
 
 
+    <figure class="Card">
+        <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/84728353?s=400&u=f7b20d62b1dd1561887ddd35a25ca3b097d20602&v=4" alt="Profile-Image" /></div>
+        <figcaption>
+            <h3>Aman Chaudhary</h3>
+            <h5 class="Role">Contributor</h5>
+            <div class="line"></div>
+            <div class="icons">
+                <a href="https://github.com/techseason/" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                <a href="https://www.linkedin.com/in/techseason/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+            </div>
+        </figcaption>
+    </figure>
+
+
+
     <!-- Please place the code above this line -->
       
     </div>
