--- a/index.html
+++ b/index.html
@@ -324,6 +324,19 @@
             </div>
         </figcaption>
     </figure>
+        
+    <figure class="Card">
+        <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/93985255?v=4" alt="Profile-Image" /></div>
+        <figcaption>
+            <h3>Prashant Jagtap</h3>
+            <h5 class="Role">Contributor</h5>
+            <div class="line"></div>
+            <div class="icons">
+                <a href="https://github.com/prashantjagtap2909" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                
+            </div>
+        </figcaption>
+    </figure>
 
 
 
