--- a/index.html
+++ b/index.html
@@ -326,6 +326,20 @@
     </figure>
 
 
+    <figure class="Card">
+        <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/96646046?v=4" alt="Profile-Image" /></div>
+        <figcaption>
+            <h3>Syed Sumaim Ali</h3>
+            <h5 class="Role">Contributor</h5>
+            <div class="line"></div>
+            <div class="icons">
+                <a href="https://github.com/SyedSumaimaly/" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                <a href="https://twitter.com/SyedSumaimAly/" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+                <a href="www.linkedin.com/in/syed-sumaim-ali" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+            </div>
+        </figcaption>
+    </figure>
+
 
     <!-- Please place the code above this line -->
       
