--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </figure>
 
 
-    <!-- Please place the code below this line -->
+    <!-- Please place the code below -->
    <figure class="Card">
     <div class="profile-image">
       <img src="https://i.pinimg.com/564x/73/91/07/7391075ec88dd14202ab1f1e19a0435e.jpg" alt="Profile-Image" />
