--- a/index.html
+++ b/index.html
@@ -353,6 +353,19 @@
         </figcaption>
     </figure>
 
+    <figure class="Card">
+        <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/114725346?v=4" alt="Profile-Image" /></div>
+        <figcaption>
+            <h3>Avtar</h3>
+            <h5 class="Role">Contributor</h5>
+            <div class="line"></div>
+            <div class="icons">
+                <a href="https://github.com/avtarsingh99/" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                <a href="https://www.linkedin.com/in/avtar-singh-73a888235/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+            </div>
+        </figcaption>
+    </figure>
+
 
     <!-- Please place the code above this line -->
       
