--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         </figure>
 
 <figure class="Card">
-    <div class="profile-image"><img src="{IMAGE-URL}" alt="Profile-Image" /></div>
+    <div class="profile-image"><img src="https://github.com/oyepriyansh.png" alt="Profile-Image" /></div>
     <figcaption>
         <h3>Priyansh Prajapat</h3>
         <h5 class="Role">Contributor</h5>
