--- a/index.html
+++ b/index.html
@@ -396,6 +396,20 @@
     </figcaption>
 </figure>
 
+<figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/91560072?v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Ankit Goyal</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/Ankit9126" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <!-- <a href="https://x.com/oypriyansh" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a> -->
+            <a href="https://www.linkedin.com/in/ankit-goyal-3416b9228/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
+
     <!-- Please place the code above this line -->
       
     </div>
