--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
 
    <figure class="Card">
         <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/96229011?v=4" alt="Profile-Image" /></div>
+         <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/72145248?v=4" alt="profile-sample6" /></div>
         <figcaption>
             <h3>Agara</h3>
             <h5 class="Role">Contributor</h5>
