Added Sameer Bakshi

--- a/index.html
+++ b/index.html
@@ -410,6 +410,18 @@
     </figcaption>
 </figure>
 
+<figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/84677407?s=400&u=2d0a2ff95e3b26bc637408506be84449c27d7a50&v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Sameer Bakshi</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/samx03" target="_blank"><i class="ion-social-github" id="github"></i></a>
+        </div>
+    </figcaption>
+</figure>
+
     <!-- Please place the code above this line -->
       
     </div>
