--- a/index.html
+++ b/index.html
@@ -409,7 +409,20 @@
         </div>
     </figcaption>
 </figure>
-
+        
+<figure class="Card">
+    <div class="profile-image"><img src="https://github.com/" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Agaramudhala</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/agaramudhala" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://x.com/" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+            <a href="https://linkedin.com/in/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
     <!-- Please place the code above this line -->
       
     </div>
