--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 </figure>
         
 <figure class="Card">
-    <div class="profile-image"><img src="https://github.com/" alt="Profile-Image" /></div>
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/9919?s=460&v=4" alt="Profile-Image" /></div>
     <figcaption>
         <h3>Agaramudhala</h3>
         <h5 class="Role">Contributor</h5>
