--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
     <footer>
         <center>
-            <h3 class="credit">Made by ayush with 💖</h3>
+            <h3 class="credit">Made with 💖 by Ayush</h3>
         </center>
 
     </footer>
