--- a/index.html
+++ b/index.html
@@ -435,6 +435,20 @@
             </figcaption>
         </figure>
 
+
+        <figure class="Card">
+            <div class="profile-image"><img src="https://drive.google.com/file/d/1J-DNxx4L72cjlkOycx5l7FZa-6vBd19s/view?usp=sharing" alt="Profile-Image" /></div>
+            <figcaption>
+                <h3>Anuj Kumar Karmakar</h3>
+                <h5 class="Role">Contributor</h5>
+                <div class="line"></div>
+                <div class="icons">
+                    <a href="https://github.com/anujkkarmakar" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                    <a href="https://twitter.com/anujkkarmakar" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/anujkkarmakar/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+                </div>
+            </figcaption>
+        </figure>
     <!-- Please place the code above this line -->
       
     </div>
