--- a/index.html
+++ b/index.html
@@ -43,8 +43,19 @@
         </figcaption>
     </figure>
 
-
-    <!-- Please place the code below -->
+    <figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/143323194?v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Kshitiz Vardhan</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/kshitizvardhan" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="www.linkedin.com/in/kshitiz-vardhan-57a80a27b" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
+    
 
    <figure class="Card">
     <div class="profile-image">
