--- a/index.html
+++ b/index.html
@@ -434,7 +434,19 @@
                 </div>
             </figcaption>
         </figure>
-
+<figure class="Card">
+    <div class="profile-image"><img src="{IMAGE-URL}" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>{YOUR_NAME}</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="GITUHB_URL" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="TWITTER_URL" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+            <a href="LINKEDIN_URL" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
     <!-- Please place the code above this line -->
       
     </div>
