--- a/index.html
+++ b/index.html
@@ -435,15 +435,15 @@
             </figcaption>
         </figure>
 <figure class="Card">
-    <div class="profile-image"><img src="{IMAGE-URL}" alt="Profile-Image" /></div>
+    <div class="profile-image"><img src="https://github.com/account" alt="Profile-Image" /></div>
     <figcaption>
         <h3>{YOUR_NAME}</h3>
         <h5 class="Role">Contributor</h5>
         <div class="line"></div>
         <div class="icons">
-            <a href="GITUHB_URL" target="_blank"><i class="ion-social-github" id="github"></i></a>
-            <a href="TWITTER_URL" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
-            <a href="LINKEDIN_URL" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+            <a href="https://github.com/DadhaniaTilak" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://twitter.com/TILAKVD" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+            <a href="https://www.linkedin.com/in/tilakkumar-dadhania-911a341a6/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
         </div>
     </figcaption>
 </figure>
