--- a/index.html
+++ b/index.html
@@ -434,10 +434,11 @@
                 </div>
             </figcaption>
         </figure>
+        
 <figure class="Card">
     <div class="profile-image"><img src="https://github.com/account" alt="Profile-Image" /></div>
     <figcaption>
-        <h3>{YOUR_NAME}</h3>
+        <h3>Dadhania Tilak</h3>
         <h5 class="Role">Contributor</h5>
         <div class="line"></div>
         <div class="icons">
