--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         </figure>
         
 <figure class="Card">
-    <div class="profile-image"><img src="https://github.com/account" alt="Profile-Image" /></div>
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/105626662?v=4" alt="Profile-Image" /></div>
     <figcaption>
         <h3>Dadhania Tilak</h3>
         <h5 class="Role">Contributor</h5>
