--- a/index.html
+++ b/index.html
@@ -448,6 +448,20 @@
         </div>
     </figcaption>
 </figure>
+
+<figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/89746236?s=400&v=4" /></div>
+    <figcaption>
+        <h3>Vaishnavi Poti</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/Vaishz" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://twitter.com/yep_vaishz" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+            <a href="https://www.linkedin.com/in/vaishnavi-v-poti-9b33a225a/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
     <!-- Please place the code above this line -->
       
     </div>
