--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Roboto+Slab:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- javascript link -->
+    <script src="index.js" defer></script>
+
     <!-- favicon -->
     <link rel="icon" href="favicon_io/favicon-32x32.png">
     <link rel="stylesheet" href="favicon_io/favicon-16x16.png">
@@ -523,9 +528,11 @@
 
     </div>
 
-    <div>
-        <a href="#" class="scroll-container" title="Scroll To Top"></a>
-    </div>
+    <!-- Scroll bottom to top -->
+
+    <button id="scrollTop">
+        <i class="fa fa-chevron-up"></i>
+    </button>
 
     <footer>
         <center>
