--- a/index.html
+++ b/index.html
@@ -582,6 +582,22 @@
                 </div>
             </figcaption>
         </figure>
+        <figure class="Card">
+            <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/105174934?v=4" /></div>
+            <figcaption>
+                <h3>Raji Roqeeb</h3>
+                <h5 class="Role">Contributor</h5>
+                <div class="line"></div>
+                <div class="icons">
+                    <a href="https://github.com/Codebox124" target="_blank"><i class="ion-social-github"
+                            id="github"></i></a>
+                    <a href="https://twitter.com/_codebox" target="_blank"><i class="ion-social-twitter"
+                            id="twitter"></i></a>
+                    <a href="" target="_blank"><i
+                            class="ion-social-linkedin" id="linkedin"></i></a>
+                </div>
+            </figcaption>
+        </figure>
 
         
         <!-- Please place the code above this line -->
