--- a/index.html
+++ b/index.html
@@ -598,6 +598,22 @@
                 </div>
             </figcaption>
         </figure>
+            <figure class="Card">
+            <div class="profile-image"><img src="https://media.licdn.com/dms/image/D4D03AQHKCQ44Ql0AXg/profile-displayphoto-shrink_400_400/0/1683884286132?e=1701907200&v=beta&t=eBuwMxiFliB5Z7VKtbjG3R0EUxV9e4ChLzHXBAvbJe4" /></div>
+            <figcaption>
+                <h3>Saurabh Shukla</h3>
+                <h5 class="Role">Contributor</h5>
+                <div class="line"></div>
+                <div class="icons">
+                    <a href="https://github.com/Saurabh13042004" target="_blank"><i class="ion-social-github"
+                            id="github"></i></a>
+                    <a href="https://twitter.com/sv176734" target="_blank"><i class="ion-social-twitter"
+                            id="twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/saurabh-shukla-0b45b3224/" target="_blank"><i
+                            class="ion-social-linkedin" id="linkedin"></i></a>
+                </div>
+            </figcaption>
+        </figure>
 
         
         <!-- Please place the code above this line -->
