--- a/index.html
+++ b/index.html
@@ -614,7 +614,19 @@
                 </div>
             </figcaption>
         </figure>
-
+<figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/121828342?v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Sheriff Oladimeji</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/Sheriff-Oladimeji" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://twitter.com/sheriffWebDev" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+            
+        </div>
+    </figcaption>
+</figure>
         
         <!-- Please place the code above this line -->
 
