--- a/damas.html
+++ b/damas.html
@@ -51,6 +51,18 @@
 
 
         <!-- Please place the code below -->
+        <figure class="Card">
+            <figcaption>
+                <h3>{dkouela}</h3>
+                <h5 class="Role">Contributor</h5>
+                <div class="line"></div>
+                <div class="icons">
+                    <a href="https://github.com/dKouela" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                    <a href="https://twitter.com/damas_kouela" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/damaskouela/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+                </div>
+            </figcaption>
+        </figure>
 
         <figure class="Card">
             <div class="profile-image">
