--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
         <!-- Please place the code below -->
 
         <figure class="Card">
+            <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/119119223?s=400&u=00548e9f241d130f85dcfb39394cd78b22f5ef5b&v=4" alt="Profile-Image" /></div>
+            <figcaption>
+                <h3>Ritwika Mahapatra</h3>
+                <h5 class="Role">Contributor</h5>
+                <div class="line">Happy Contributing everyone!</div>
+                <div class="icons">
+                    <a href="https://github.com/Ritwika-14" target="_blank"><i class="ion-social-github" id="github"></i></a>
+                    <a href="https://www.linkedin.com/in/ritwika-mahapatra-a23232254/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+                </div>
+            </figcaption>
+        </figure>
+
+        <figure class="Card">
             <div class="profile-image">
                 <img src="https://i.pinimg.com/564x/73/91/07/7391075ec88dd14202ab1f1e19a0435e.jpg"
                     alt="Profile-Image" />
