--- a/index.html
+++ b/index.html
@@ -614,7 +614,6 @@
                 </div>
             </figcaption>
         </figure>
-        
 <figure class="Card">
     <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/121828342?v=4" alt="Profile-Image" /></div>
     <figcaption>
@@ -629,16 +628,15 @@
     </figcaption>
 </figure>
 
-<figure class="Card">
-    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/29387672?s=400&u=995be48a60a6057d4a33e45f72db7a75cc056ea1&v=4" alt="Profile-Image" /></div>
+        <figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/sarthakvs" alt="Profile-Image" /></div>
     <figcaption>
-        <h3>Cardoso</h3>
+        <h3>Sarthak Sundriyal</h3>
         <h5 class="Role">Contributor</h5>
         <div class="line"></div>
         <div class="icons">
-            <a href="https://github.com/cardosource" target="_blank"><i class="ion-social-github" id="github"></i></a>
-            <a href="https://twitter.com/cardosource" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
-            <a href="LINKEDIN_URL" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+            <a href="https://github.com/sarthakvs" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://www.linkedin.com/in/sarthak-sundriyal-b622b022a/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
         </div>
     </figcaption>
 </figure>
