--- a/index.html
+++ b/index.html
@@ -643,6 +643,19 @@
     </figcaption>
 </figure>
 
+<figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/71514760?s=400&u=a878aaff3e22e1e176ef0b21e921c72d04edc322&v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Atul</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/gawadeatul" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://twitter.com/gawadeatul27" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+            <a href="https://www.linkedin.com/in/atulgawade/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
         
         <!-- Please place the code above this line -->
 
