--- a/index.html
+++ b/index.html
@@ -643,7 +643,18 @@
     </figcaption>
 </figure>
 
-        
+        <figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/98168713?s=400&v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Sarthak Sundriyal</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/sarthakvs" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://www.linkedin.com/in/sarthak-sundriyal-b622b022a/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
         <!-- Please place the code above this line -->
 
 
