--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <!-- title -->
     <h1>CardConnect</h1>
-
+    <button class="mode" onclick="myFunction()">Switch mode</button>
     <div class="container">
         <!-- cards -->
         <figure class="Card">
