--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <figure class="Card">
             <div class="profile-image">
-                <img src="https://i.pinimg.com/564x/73/91/07/7391075ec88dd14202ab1f1e19a0435e.jpg"
+                <img src="https://avatars.githubusercontent.com/u/124430100?v=4"
                     alt="Profile-Image" />
             </div>
             <figcaption>
