--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>CardConnect</h1>
 
     <div class="container">
-        <!-- cards -->
+        <!-- Maintainer's profile cards -->
         <figure class="Card">
             <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/72145248?v=4"
                     alt="profile-sample6" /></div>
@@ -50,7 +50,7 @@
         </figure>
 
 
-        <!-- Please place the code below -->
+        <!-- Profile Cards of users -->
 
         <figure class="Card">
             <div class="profile-image">
@@ -671,8 +671,7 @@
 </figure>
           
         
-
-        <!-- Please place the code above this line -->
+        <!-- NOTE: Please place the code above this line -->
 
 
     </div>
