--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
         <!-- Profile Cards of users -->
 
         <figure class="Card">
+            <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/124430100?v=4" alt="Profile-Image" /></div>
+            <figcaption>
+        <h3>Naik Mubashir</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/naikmubashir" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://twitter.com/naik_mubashir" target="_blank"><i class="ion-social-twitter" id="twitter"></i></a>
+            <a href="https://www.linkedin.com/in/naikmubashir/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+            </div>
+            </figcaption>
+        </figure>
+
+        <figure class="Card">
             <div class="profile-image">
                 <img src="https://i.pinimg.com/564x/73/91/07/7391075ec88dd14202ab1f1e19a0435e.jpg"
                     alt="Profile-Image" />
