--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
         
     
         <figure class="Card">
-            <div class="profile-image"><img src="./Hacktoberfest-event-kit/profile-pic.jpg" alt="Profile-Image" /></div>
+            <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/108727859?v=4" alt="Profile-Image" /></div>
             <figcaption>
                 <h3>Aayush Sahu</h3>
                 <h5 class="Role">Contributor</h5>
