--- a/index.html
+++ b/index.html
@@ -683,7 +683,20 @@
             </div>
             </figcaption>
         </figure>
-          
+
+
+        <figure class="Card">
+    <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/75925058?s=96&v=4" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Omkar Sarodeh3>
+        <h5 class="Role">Contributor</h5>
+        <div class="line"></div>
+        <div class="icons">
+            <a href="https://github.com/Omkar243-sys" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://www.linkedin.com/in/omkar-sarode-38a1141a1/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
         
         <!-- NOTE: Please place the code above this line -->
 
