--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
         <figure class="Card">
     <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/75925058?s=96&v=4" alt="Profile-Image" /></div>
     <figcaption>
-        <h3>Omkar Sarodeh3>
+        <h3>Omkar Sarode<h3>
         <h5 class="Role">Contributor</h5>
         <div class="line"></div>
         <div class="icons">
