--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         </figure>
 
 
-        <figure class="Card">
+    <figure class="Card">
     <div class="profile-image"><img src="https://avatars.githubusercontent.com/u/75925058?s=96&v=4" alt="Profile-Image" /></div>
     <figcaption>
         <h3>Omkar Sarode<h3>
@@ -708,6 +708,17 @@
         <div class="icons">
             <a href="https://github.com/Omkar243-sys" target="_blank"><i class="ion-social-github" id="github"></i></a>
             <a href="https://www.linkedin.com/in/omkar-sarode-38a1141a1/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+        </div>
+    </figcaption>
+</figure>
+<figure class="Card">
+    <div class="profile-image"><img src="/card.jpg" alt="Profile-Image" /></div>
+    <figcaption>
+        <h3>Anamaika Shukla</h3>
+        <h5 class="Role">Contributor</h5>
+        <div class="icons">
+            <a href="https://github.com/NaMiKA0305" target="_blank"><i class="ion-social-github" id="github"></i></a>
+            <a href="https://www.linkedin.com/in/anamika-s-88a7ab1a5/" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
         </div>
     </figcaption>
 </figure>
