--- a/index.html
+++ b/index.html
@@ -754,7 +754,20 @@
             </figcaption>
         </figure>
 
-
+        <figure class="Card">
+            <div class="profile-image"><img src="https://github.com/shresritik.png"
+                    alt="Profile-Image" /></div>
+            <figcaption>
+                <h3>Ritik Shrestha<h3>
+                        <h5 class="Role">Contributor</h5>
+                        <div class="line"></div>
+                        <div class="icons">
+                            <a href="https://github.com/shresritik target="_blank"><i class="ion-social-github"  id="github"></i></a> 
+                                 
+                            <a href="https://www.linkedin.com/in/ritik-shrestha-35043627b" target="_blank"><i class="ion-social-linkedin" id="linkedin"></i></a>
+                        </div>
+            </figcaption>
+        </figure>
         <!-- NOTE: Please place the code above this line -->
 
 
